--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,4 +94,6 @@ body {
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
+    padding: 0;
+    margin: 0;
 }
